--- a/Using PascalVOC Images to Train Retinanet.ipynb
+++ b/Using PascalVOC Images to Train Retinanet.ipynb
@@ -316,7 +316,15 @@
     "model.save('mymodel1.h5') # creates a HDF5 file 'my_model.h5'"
    ]
   },
-  
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
  ],
  "metadata": {
   "kernelspec": {
